documentation/2.1.1/model.staffDefPart.md
---
layout: oldGuidelines
---
<article class="page type-page status-publish hentry">
   <div class="entry-content">
      <div class="panel-grid">
         <div class="panel-grid-cell" style="width: 65%; float: left;">
            <div class="panel widget widget_text panel-first-child panel-last-child">
               <div class="textwidget">
                  <div xmlns="http://www.w3.org/1999/xhtml">
                     <h3 class="oddSpec status_stable" id="model.staffDefPart">model.staffDefPart</h3>
                     <table class="wovenodd">
                        
                        <tr>
                           
                           <td colspan="2" class="wovenodd-col2"><span class="label">model.staffDefPart</span> groups elements that may appear more than once in the
                              declaration of staff features.
                           </td>
                           
                        </tr>
                        
                        <tr>
                           
                           <td class="wovenodd-col1"><span class="label" lang="en">Module</span></td>
                           
                           <td class="wovenodd-col2">MEI.shared</td>
                           
                        </tr>
                        
                        <tr>
                           
                           <td class="wovenodd-col1"><span class="label" lang="en">Used by</span></td>
                           
                           <td class="wovenodd-col2">
                              <div class="parent"><a class="link_odd_elementSpec" href="/documentation/2.1.1/staffDef">staffDef</a></div>
                           </td>
                           
                        </tr>
                        
                        <tr>
                           
                           <td class="wovenodd-col1"><span class="label" lang="en">Members</span></td>
                           
                           <td class="wovenodd-col2"><a class="link_odd_classSpec" href="/documentation/2.1.1/model.keySigLike">model.keySigLike</a><span class="showmembers2"> [<a class="link_odd_elementSpec" href="/documentation/2.1.1/keySig">keySig</a>] </span>
                              <a class="link_odd_classSpec" href="/documentation/2.1.1/model.meterSigLike">model.meterSigLike</a><span class="showmembers2"> [<a class="link_odd_elementSpec" href="/documentation/2.1.1/meterSig">meterSig</a>
                                 <a class="link_odd_elementSpec" href="/documentation/2.1.1/meterSigGrp">meterSigGrp</a>] </span>
                              <a class="link_odd_classSpec" href="/documentation/2.1.1/model.staffDefPart.mensural">model.staffDefPart.mensural</a><span class="showmembers2"> [<a class="link_odd_elementSpec" href="/documentation/2.1.1/mensur">mensur</a>
                                 <a class="link_odd_elementSpec" href="/documentation/2.1.1/proport">proport</a>] </span>
                              <a class="link_odd_elementSpec" href="/documentation/2.1.1/clef">clef</a>
                              <a class="link_odd_elementSpec" href="/documentation/2.1.1/clefGrp">clefGrp</a></td>
                           
                        </tr>
                        
                     </table>
                  </div>
               </div>
            </div>
         </div>
         <div class="panel-grid-cell" style="width: 35%; float: left;">
            <div class="panel widget widget_text panel-first-child panel-last-child">
               <header class="entry-header">
                  <h1 class="entry-title">
                     MEI Guidelines 
                     <small>Version 2.1.1</small>
                  </h1>
               </header>
               <div class="textwidget">
                  <ul class="guidelinesList">
                     <li>
                        <a class="guidelines_mainLink" href="/documentation/2.1.1/chapters">MEI Guidelines</a>
                     </li>
                     <li>
                        <a class="guidelines_mainLink" href="/documentation/2.1.1/elements">Elements</a>
                     </li>
                     <li>
                        <a class="guidelines_mainLink" href="/documentation/2.1.1/atts">Attributes</a>
                     </li>
                     <li>
                        <a class="guidelines_mainLink" href="/documentation/2.1.1/models">Model Classes</a>
                     </li>
                     <li>
                        <a class="guidelines_mainLink" href="/documentation/2.1.1/data">Data Types</a>
                     </li>
                  </ul>
               </div>
               <div style="margin: 10px 30px; border-bottom: 0.5px solid #666666; height: 1px;"></div>
               <h3 class="widget-title">Model Classes</h3>
               <div class="textwidget">
                  <ul class="guidelinesList">
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec a" href="/documentation/2.1.1/model.addressLike">model.addressLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec a" href="/documentation/2.1.1/model.alignLike">model.alignLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec a" href="/documentation/2.1.1/model.annotLike">model.annotLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec a" href="/documentation/2.1.1/model.appLike">model.appLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec b" href="/documentation/2.1.1/model.backLike">model.backLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec b" href="/documentation/2.1.1/model.biblLike">model.biblLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec b" href="/documentation/2.1.1/model.biblPart">model.biblPart</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec c" href="/documentation/2.1.1/model.captionLike">model.captionLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec c" href="/documentation/2.1.1/model.choicePart">model.choicePart</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec c" href="/documentation/2.1.1/model.chordTableLike">model.chordTableLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec c" href="/documentation/2.1.1/model.controleventLike">model.controleventLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec c" href="/documentation/2.1.1/model.controleventLike.cmn">model.controleventLike.cmn</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec c" href="/documentation/2.1.1/model.controleventLike.harmony">model.controleventLike.harmony</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec d" href="/documentation/2.1.1/model.dateLike">model.dateLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec d" href="/documentation/2.1.1/model.divLike">model.divLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec e" href="/documentation/2.1.1/model.editionLike">model.editionLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec e" href="/documentation/2.1.1/model.editLike">model.editLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec e" href="/documentation/2.1.1/model.editorialDeclPart">model.editorialDeclPart</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec e" href="/documentation/2.1.1/model.editorialLike">model.editorialLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec e" href="/documentation/2.1.1/model.encodingPart">model.encodingPart</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec e" href="/documentation/2.1.1/model.endingLike">model.endingLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec e" href="/documentation/2.1.1/model.eventLike">model.eventLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec e" href="/documentation/2.1.1/model.eventLike.cmn">model.eventLike.cmn</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec e" href="/documentation/2.1.1/model.eventLike.measureFilling">model.eventLike.measureFilling</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec e" href="/documentation/2.1.1/model.eventLike.mensural">model.eventLike.mensural</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec e" href="/documentation/2.1.1/model.eventLike.neumes">model.eventLike.neumes</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec e" href="/documentation/2.1.1/model.eventPart">model.eventPart</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec e" href="/documentation/2.1.1/model.expressionLike">model.expressionLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec f" href="/documentation/2.1.1/model.figbassLike">model.figbassLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec f" href="/documentation/2.1.1/model.figDescLike">model.figDescLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec f" href="/documentation/2.1.1/model.figureLike">model.figureLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec f" href="/documentation/2.1.1/model.fLike">model.fLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec f" href="/documentation/2.1.1/model.frontLike">model.frontLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec f" href="/documentation/2.1.1/model.frontPart">model.frontPart</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec g" href="/documentation/2.1.1/model.graphicLike">model.graphicLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec g" href="/documentation/2.1.1/model.graphicprimitiveLike">model.graphicprimitiveLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec h" href="/documentation/2.1.1/model.harmLike">model.harmLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec h" href="/documentation/2.1.1/model.headerPart">model.headerPart</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec h" href="/documentation/2.1.1/model.headLike">model.headLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec i" href="/documentation/2.1.1/model.identifierLike">model.identifierLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec i" href="/documentation/2.1.1/model.imprintPart">model.imprintPart</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec i" href="/documentation/2.1.1/model.incipLike">model.incipLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec i" href="/documentation/2.1.1/model.instrDefLike">model.instrDefLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec i" href="/documentation/2.1.1/model.itemLike">model.itemLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec k" href="/documentation/2.1.1/model.keyAccidLike">model.keyAccidLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec k" href="/documentation/2.1.1/model.keySigLike">model.keySigLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec l" href="/documentation/2.1.1/model.labelLike">model.labelLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec l" href="/documentation/2.1.1/model.layerDefLike">model.layerDefLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec l" href="/documentation/2.1.1/model.layerLike">model.layerLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec l" href="/documentation/2.1.1/model.layerPart">model.layerPart</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec l" href="/documentation/2.1.1/model.layerPart.cmn">model.layerPart.cmn</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec l" href="/documentation/2.1.1/model.layerPart.mensural">model.layerPart.mensural</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec l" href="/documentation/2.1.1/model.layerPart.mensuralAndNeumes">model.layerPart.mensuralAndNeumes</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec l" href="/documentation/2.1.1/model.layerPart.neumes">model.layerPart.neumes</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec l" href="/documentation/2.1.1/model.lbLike">model.lbLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec l" href="/documentation/2.1.1/model.lgLike">model.lgLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec l" href="/documentation/2.1.1/model.listLike">model.listLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec l" href="/documentation/2.1.1/model.lLike">model.lLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec l" href="/documentation/2.1.1/model.locrefLike">model.locrefLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec l" href="/documentation/2.1.1/model.lyricsLike">model.lyricsLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec m" href="/documentation/2.1.1/model.manifestationLike">model.manifestationLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec m" href="/documentation/2.1.1/model.mdivLike">model.mdivLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec m" href="/documentation/2.1.1/model.measureLike">model.measureLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec m" href="/documentation/2.1.1/model.measurementLike">model.measurementLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec m" href="/documentation/2.1.1/model.measurePart">model.measurePart</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec m" href="/documentation/2.1.1/model.metaLike.score">model.metaLike.score</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec m" href="/documentation/2.1.1/model.meterSigLike">model.meterSigLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec m" href="/documentation/2.1.1/model.midiLike">model.midiLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec m" href="/documentation/2.1.1/model.milestoneLike.music">model.milestoneLike.music</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec m" href="/documentation/2.1.1/model.milestoneLike.text">model.milestoneLike.text</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec n" href="/documentation/2.1.1/model.nameLike">model.nameLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec n" href="/documentation/2.1.1/model.nameLike.agent">model.nameLike.agent</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec n" href="/documentation/2.1.1/model.nameLike.geogName">model.nameLike.geogName</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec n" href="/documentation/2.1.1/model.nameLike.label">model.nameLike.label</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec n" href="/documentation/2.1.1/model.nameLike.place">model.nameLike.place</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec n" href="/documentation/2.1.1/model.noteModifierLike">model.noteModifierLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec n" href="/documentation/2.1.1/model.numLike">model.numLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec o" href="/documentation/2.1.1/model.ornamentLike.cmn">model.ornamentLike.cmn</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec o" href="/documentation/2.1.1/model.ossiaLike">model.ossiaLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec p" href="/documentation/2.1.1/model.paracontentPart">model.paracontentPart</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec p" href="/documentation/2.1.1/model.partLike">model.partLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec p" href="/documentation/2.1.1/model.partsLike">model.partsLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec p" href="/documentation/2.1.1/model.pbLike">model.pbLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec p" href="/documentation/2.1.1/model.physDescPart">model.physDescPart</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec p" href="/documentation/2.1.1/model.pLike">model.pLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec p" href="/documentation/2.1.1/model.pubStmtPart">model.pubStmtPart</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec q" href="/documentation/2.1.1/model.quoteLike">model.quoteLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec r" href="/documentation/2.1.1/model.rdgPart.critapp">model.rdgPart.critapp</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec r" href="/documentation/2.1.1/model.rdgPart.text">model.rdgPart.text</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec r" href="/documentation/2.1.1/model.relationLike">model.relationLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec r" href="/documentation/2.1.1/model.rendLike">model.rendLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec r" href="/documentation/2.1.1/model.repositoryLike">model.repositoryLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec r" href="/documentation/2.1.1/model.resourceLike">model.resourceLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec r" href="/documentation/2.1.1/model.respLike">model.respLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec s" href="/documentation/2.1.1/model.scoreDefLike">model.scoreDefLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec s" href="/documentation/2.1.1/model.scoreLike">model.scoreLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec s" href="/documentation/2.1.1/model.scorePart">model.scorePart</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec s" href="/documentation/2.1.1/model.sectionLike">model.sectionLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec s" href="/documentation/2.1.1/model.sectionPart">model.sectionPart</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec s" href="/documentation/2.1.1/model.sectionPart.cmn">model.sectionPart.cmn</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec s" href="/documentation/2.1.1/model.sectionPart.mensuralAndNeumes">model.sectionPart.mensuralAndNeumes</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec s" href="/documentation/2.1.1/model.staffDefLike">model.staffDefLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec s" href="/documentation/2.1.1/model.staffDefPart">model.staffDefPart</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec s" href="/documentation/2.1.1/model.staffDefPart.mensural">model.staffDefPart.mensural</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec s" href="/documentation/2.1.1/model.staffGrpLike">model.staffGrpLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec s" href="/documentation/2.1.1/model.staffLike">model.staffLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec s" href="/documentation/2.1.1/model.staffPart">model.staffPart</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec s" href="/documentation/2.1.1/model.staffPart.mensuralAndNeumes">model.staffPart.mensuralAndNeumes</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec s" href="/documentation/2.1.1/model.startLike.corpus">model.startLike.corpus</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec s" href="/documentation/2.1.1/model.startLike.header">model.startLike.header</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec s" href="/documentation/2.1.1/model.substPart">model.substPart</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec s" href="/documentation/2.1.1/model.syllableLike">model.syllableLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec s" href="/documentation/2.1.1/model.syllablePart">model.syllablePart</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec s" href="/documentation/2.1.1/model.sylLike">model.sylLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec s" href="/documentation/2.1.1/model.symbolTableLike">model.symbolTableLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec t" href="/documentation/2.1.1/model.tableLike">model.tableLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec t" href="/documentation/2.1.1/model.textcomponentLike">model.textcomponentLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec t" href="/documentation/2.1.1/model.textphraseLike">model.textphraseLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec t" href="/documentation/2.1.1/model.textphraseLike.limited">model.textphraseLike.limited</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec t" href="/documentation/2.1.1/model.titleLike">model.titleLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec t" href="/documentation/2.1.1/model.transcriptionLike">model.transcriptionLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec v" href="/documentation/2.1.1/model.verseLike">model.verseLike</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec w" href="/documentation/2.1.1/model.workIdent">model.workIdent</a></li>
                     <li>
                        <br></br>
                     </li>
                     <li><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd_classSpec w" href="/documentation/2.1.1/model.workLike">model.workLike</a></li>
                     <li>
                        <br></br>
                     </li>
                  </ul>
               </div>
            </div>
         </div>
      </div>
   </div>
</article>